paragraphs added in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <h1>This is the New content I have added.</h1>
 
+<p>This is the Latest Paragraph that I added in this File</p>
+<p>This is the a sample paragraph </p>
+
 </body>
 </html>
 
